--- a/style.css
+++ b/style.css
@@ -1,49 +1,73 @@
  *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box; 
+    box-sizing: border-box;
 
     body, html {
         margin: 0;
         padding: 0;
     }
-    
+
     .hero {
         background-image: url('images/gheralta.jpeg');
         .hero {
-            background-color: #333; 
-            color: white; 
-            padding: 10px 0; 
-            display: flex; 
+            background-color: #333;
+            color: white;
+            padding: 10px 0;
+            display: flex;
 
         }
-        
+
         .container {
             justify-content: space-between;
             align-items: center;
         }
-        
+
         .logo img {
             position: relative;
-            max-height: 50px; 
-            width: 60px; 
+            max-height: 50px;
+            width: 60px;
             flex: 1;
-        
+
         }
-        
+
         background-size: cover;
         background-position: center;
 
-        padding: 150px 50;  
+        padding: 150px 50;
         text-align: center;
     }
     }
+
+    .menu-toggle {
+
+      font-size: 16px;
+      color: rgb(240, 204, 204);
+
+      z-index: 999;
+
+  }
+  nav ul.active {
+    display: block;
+}
+
+/* Style the burger menu for smaller screens */
+
+
+/* For larger screens, hide the burger button */
+@media (min-width: 769px) {
+.menu-toggle {
+    display: none;
+}
+}
+
+
     .welcome-text {
         text-align: center;
         color: rgb(35, 15, 7);
         font-size: 34px;
-        padding: 150px 50; 
-        margin-top: 20px 
+        padding: 150px 50;
+        margin-top: 20px
 
 
 
@@ -59,38 +83,38 @@
         margin: 0 auto;
         padding: 0 20px;
     }
-    
+
  .logo img {
-        
-    font-size: 24px; 
+
+    font-size: 24px;
     max-width: 70%;
     height: auto;
-       
-    } 
-    
+
+    }
+
     nav ul {
         list-style: none;
         margin: 0;
         padding: 0;
     }
-    
+
     nav ul li {
     display: inline-block;
-    margin-left: 20px; 
+    margin-left: 20px;
     display: inline-block;
     justify-content: space-between;
     flex: 3;
-    padding: 6px 9px; 
+    padding: 6px 9px;
     font-size: larger;
-    background: #333333;
-    margin-left: 20px; 
+    /* background: #333333; */
+    margin-left: 20px;
     position: relative;
     margin: 0 1px;
     text-decoration: none;
     color: #fff;
     transition: 0.6s;
     }
-    
+
     nav ul li a {
         text-decoration: none;
         color: #f5efef;
@@ -98,19 +122,59 @@
         display: flex;
         justify-content: space-between;
     }
-    
-    .welcome-text {
-        margin-top: 30px; 
+
+    .topnav {
+      overflow: hidden;
+      background-color: #333;
+      position: relative;
     }
-     
+
+    .topnav #myLinks {
+      display: none;
+    }
+
+    .topnav a {
+      color:white;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+      display: block;
+    }
+
+    /* Style the hamburger menu */
+    .topnav a.icon {
+      background: black;
+      display: block;
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+
+    /* Add a grey background color on mouse-over */
+    .topnav a:hover {
+      background-color: #ddd;
+      color: orangered;
+    }
+
+    /* Style the active link (or home/logo) */
+    .active {
+      background-color: #ddd;
+      color: white;
+    }
+
+
+    .welcome-text {
+        margin-top: 30px;
+    }
+
 nav ul li:hover{
     background: orangered;
     color: white;
-} 
+}
 section {
-    
+
     margin-bottom: 20px;
-    text-align: center; 
+    text-align: center;
     text-decoration: none;
 }
 .main-project {
@@ -119,7 +183,7 @@ section {
     flex-wrap: wrap;
     margin-top: 100px;
 
-    
+
 }
 .main-project:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
@@ -175,24 +239,22 @@ section {
 }
 
 
-
-
 .skills {
     display: flex;
-    justify-content: center; 
+    justify-content: center;
     flex-wrap: wrap;
     background-color: white;
     display: inline-block;
     padding: 2px 16px;
     transition: transform 0.3s ease;
- 
+
   }
   .skills h2{
     text-align: center;
     margin-bottom: 10px;
 
   }
-  
+
   .skill-card {
     margin-top: 10px;
   flex: auto;
@@ -203,44 +265,44 @@ section {
   background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 8px;
-  overflow: hidden; 
+  overflow: hidden;
   }
-  
+
   .skill-card:hover {
     transform: translateY(-5px);
   }
-  
+
   .skill-logo {
     padding: 20px;
     text-align: center;
   }
-  
+
   .skill-logo img {
     max-width: 100px;
   }
-  
+
   .skill-details {
     padding: 20px;
   }
-  
+
   .skill-details h3 {
     margin-bottom: 10px;
   }
-  
+
   .progress-bar {
     background-color: #ddd;
     height: 20px;
     border-radius: 10px;
-    width: 100%; 
-  
+    width: 100%;
+
   }
-  
+
   .progress {
     height: 100%;
     background-color: rgb(222, 92, 92);
     border-radius: 10px;
   }
-  
+
 
 .container {
     padding: 15px 9%;
@@ -258,7 +320,7 @@ section {
 }
 
 .container .box-container .box {
-    display: grid;    
+    display: grid;
     grid-template-columns: repeat(auto-fit,minimaz(270px, 1fr));
     gap: 15px;
 }
@@ -274,11 +336,9 @@ section {
 
 
 
-
-
 .container.contact-box .box img {
     height: 80px;
-} 
+}
 .container.contact-box .box h3 {
     color: #444;
     font-size: 22px;
@@ -289,21 +349,19 @@ section {
     color: #444;
     font-size: 22px;
     padding: 10px 0;
-}  
+}
 .footer {
     text-align: center;
     margin-bottom: 5px;
 }
 }
 
-
-
  .contact{
     padding-top: 10px;;
     background-color: #242e25;
     position: relative;
     max-width: 100%;
-} 
+}
 .contact-box {
     position: relative;
     background-color: #242e25;
@@ -313,20 +371,20 @@ section {
     width: 450px;
     margin: 10px auto;
   }
-  
+
   .contact-box h2 {
     margin-top: 0;
   }
-  
+
   .form-group {
     margin-bottom: 21px;
   }
-  
+
   .form-group label {
     display: block;
     margin-bottom: 1px;
   }
-  
+
   input[type="email"],
   input[type="text"],
   textarea {
@@ -335,11 +393,11 @@ section {
     border: none;
     border-radius: 5px;
   }
-  
+
   textarea {
     height: 200px;
   }
-  
+
   button {
     background-color: orangered;
     color: white;
@@ -348,10 +406,10 @@ section {
     padding: 10px 20px;
     cursor: pointer;
   }
-  
+
   button:hover {
     background-color: rgb(170, 154, 148);
-  } 
+  }
 .footer {
     text-align: center;
     margin-bottom: 10px;
